request book component init

--- a/Source/Books.Web/Views/Catalog/Book.cshtml
+++ b/Source/Books.Web/Views/Catalog/Book.cshtml
@@ -8,4 +8,5 @@
     <li><label><strong>Publisher</strong></label> @Model.Publisher</li>
     <li><label><strong>Year Of Publication</strong></label> @Model.YearOfPublication</li>
 </ul>
+@Component.Invoke("RequestButton", Model.ISBN)
 
